# cli

./: .gitignore  Makefile  pyproject.toml  readme.md
docker_ready_cli/: __init__.py  main.py
docker_ready_cli/commands/: __init__.py  ps.py  run.py  show.py
